# rustux

./: README.md  REFACTORING_PLAN.md  TEST_INTERRUPTS.md  TODO.md  TREE.md  build-live-image.sh  build.rs  quick-test.sh
rustux/: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  build  build.sh  test-qemu.sh
rustux/docs/: ARCHITECTURE.md  IMAGE.md  PLAN.md  REFACTORING_PLAN.md  TESTS.md
rustux/docs/decisions/: structural-mistake.md
rustux/kernel/: Cargo.toml
rustux/kernel/src/: lib.rs
rustux/kernel/src/kernel/: mm.rs  process.rs  sched.rs
rustux/scripts/: create-bootable-image.sh
rustux/src/: init.rs  lib.rs  main.rs  test_entry.rs
rustux/src/acpi/: madt.rs  rsdt.rs
rustux/src/arch/: mod.rs
rustux/src/arch/amd64/: apic.rs  bootstrap16.rs  cache.rs  controller.rs  (+10 more)
rustux/src/drivers/: mod.rs  uart.rs
rustux/src/exec/: elf.rs  mod.rs  process_loader.rs  userspace_exec_test.rs  userspace_test.rs
rustux/src/fs/: vfs.rs
rustux/src/mm/: allocator.rs  mod.rs  pmm.rs
rustux/src/object/: channel.rs  handle.rs  job.rs  timer.rs  vmo.rs
rustux/src/process/: address_space.rs  mod.rs  switch.rs  table.rs
rustux/src/sched/: mod.rs  round_robin.rs  scheduler.rs  state.rs  thread.rs
rustux/src/sync/: event.rs  mod.rs  spinlock.rs  wait_queue.rs
rustux/src/syscall/: mod.rs
rustux/src/testing/: harness.rs
rustux/test-userspace/: hello-syscall.c  hello-syscall.elf  hello.c  hello.elf
rustux/test-userspace/shell/: shell.c
rustux/userspace/c-progs/: Makefile  counter.c  hello.c  init.c  syscall.h
rustux/userspace/test/: .gitignore  build.sh
(+82 files in other folders)
